--- a/stylesheet.css
+++ b/stylesheet.css
@@ -58,7 +58,7 @@ ul{
 .top-wrapper{
   opacity:0.8;
   padding:180px 0 100px 0;
-  background-image:url(https://tkby.github.io/Learning-by-Viscuit.github.io/top_img.jpg);
+  background-image:url(https://tkby.github.io/micra.github.io/micra_top.jpg);
   background-size:cover;
   color:white;
   text-align:center;
