--- a/stylesheet.css
+++ b/stylesheet.css
@@ -247,7 +247,7 @@ header {
   float:right;
   
   }
- 
+ /*
 .lesson{
   float:left;
   width:11%;
@@ -264,7 +264,7 @@ header {
   width:100%;
   color:#333333;
   }
-
+*/
  p.CC img {
    width:100px;
    }
