--- a/stylesheet.css
+++ b/stylesheet.css
@@ -252,10 +252,11 @@ header {
   float:left;
   width:11%;
   }
- 
+ */
  .lesson-icon{
    position:relative;
    width:50%;
+   flex-wrap: wrap;
   }
   
  .lesson-icon p{
@@ -264,7 +265,7 @@ header {
   width:100%;
   color:#333333;
   }
-*/
+
  p.CC img {
    width:100px;
    }
