--- a/stylesheet.css
+++ b/stylesheet.css
@@ -290,7 +290,13 @@ header {
   text-align:center;
   }
 
-
+table {
+   border-collapse: collapse; /* 隣り合うセルの線を結合 */
+   border: 2px solid black;    /* 外側は青色の実線2px */
+}
+td {
+   border: 1px solid black;    /* 内側は青色の実線1px */
+}
   
   
 
